--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -7,7 +7,8 @@
   "build": "CI=false react-scripts build"
 },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": "9.x"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
