--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -2,10 +2,6 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "installCommand": "npm install --legacy-peer-deps",
-"scripts": {
-  "build": "CI=false react-scripts build"
-},
   "engines": {
     "node": "18.x",
     "npm": "9.x"
@@ -21,13 +17,14 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "5.0.2",
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "npm install -g npm@9",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
