--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "22.x",  // Updated from 18.x
+    "npm": "11.x"   // Updated from 9.x
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -17,12 +17,12 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "5.0.2",
+    "react-scripts": "^5.0.1",  // Changed from exact version
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "preinstall": "npm install -g npm@9",
+    "preinstall": "npm install -g npm@11",  // Updated to npm 11
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
