--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^7.8.0",
     "react-scripts": "^5.0.1", 
     "recharts": "^3.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ajv": "^6.12.6"
   },
   "scripts": {
     "preinstall": "npm install -g npm@11", 
