--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "^5.0.1", 
+    "react-scripts": "5.0.3", 
+    "ajv": "^8.12.0"   
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4",
     "ajv": "^6.12.6"
+  },
+  "resolutions": {
+    "ajv": "^8.12.0"          
   },
   "scripts": {
     "preinstall": "npm install -g npm@11", 
