--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=22.0.0",
+    "node": "18.x",
   "npm": ">=10.0.0"  
   },
   "dependencies": {
@@ -12,12 +12,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
-   "react": "^18.2.0",
+   "react": "^17.0.2",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "5.0.3", 
+    "react-scripts": "4.0.3",
     "ajv": "^8.12.0"   
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4",
