--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "4.0.3",
-    "ajv": "^8.12.0"   
+    "ajv": "^8.12.0",   
     "recharts": "^3.1.2",
-    "web-vitals": "^2.1.4",
-    "ajv": "^6.12.6"
+    "web-vitals": "^2.1.4"
   },
   "resolutions": {
     "ajv": "^8.12.0"          
