--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.3",
+     "webpack": "^5.89.0",
     "ajv": "^8.12.0",   
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
