--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
-   "react": "^18.2.0", 
-    "react-dom": "^18.2.0",
-     "react-scripts": "4.0.3",
+   "react": "17.0.2",
+  "react-dom": "17.0.2",
+  "react-scripts": "4.0.3",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-     "webpack": "^5.89.0",
+      "webpack": "4.44.2",
     "ajv": "^8.12.0",   
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
