--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-   "build": "CI=false GENERATE_SOURCEMAP=false SKIP_PREFLIGHT_CHECK=true react-scripts build",
+  "build": "react-scripts --max_old_space_size=4096 build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "postinstall": "patch-package || true"
   },
   "eslintConfig": {
     "extends": [
