--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
-   "react": "17.0.2",
-  "react-dom": "17.0.2",
-  "react-scripts": "4.0.3",
+
+"react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "@testing-library/react": "^13.4.0", 
+  "react-scripts": "5.0.1",
+    
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
