--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-  "build": "react-scripts --max_old_space_size=4096 build",
+   "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
