--- a/package.json
+++ b/package.json
@@ -3,38 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-  "npm": ">=10.0.0"  
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   },
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "leaflet": "^1.9.4",
-
-"react": "^18.2.0",
-  "react-dom": "^18.2.0",
-  "@testing-library/react": "^13.4.0", 
-  "react-scripts": "4.0.1",
-    
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0",
-      "webpack": "4.44.2",
-    "ajv": "^8.12.0",   
+    "ajv": "^8.12.0",
     "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
+    "webpack": "^5.89.0",
     "ajv": "^8.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
-   "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false CI=false NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-     "postinstall": "patch-package || true"
+    "postinstall": "patch-package || true"
   },
   "eslintConfig": {
     "extends": [
