--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+     "node": "18.16.0",
+  "npm": ">=8.0.0"
   },
   "dependencies": {
     "@testing-library/dom": "^8.17.1",
