--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "engines": {
      "node": "18.16.0",
-  "npm": ">=8.0.0"
+  "npm": "9.5.1"
   },
   "dependencies": {
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "^14.5.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -20,7 +20,7 @@
     "react-router-dom": "^7.8.0",
     "ajv": "^8.12.0",
     "recharts": "^3.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "2.1.4"
   },
   "resolutions": {
     "webpack": "^5.89.0",
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false CI=false NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
+   "build": "GENERATE_SOURCEMAP=false CI=false NODE_OPTIONS='--max-old-space-size=4096' react-scripts build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
