--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-     "node": "18.17.1",
-    "npm": "9.6.7"
+     "node": ">=20.0.0",  
+    "npm": ">=10.0.0"
   },
   "dependencies": {
     "@testing-library/dom": "^8.17.1",
@@ -17,7 +17,7 @@
     "react-scripts": "5.0.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.8.0",
+    "react-router-dom": "6.20.1",
     "ajv": "^8.12.0",
     "recharts": "^3.1.2",
     "web-vitals": "2.1.4"
