--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,5 @@
   publish = "build"
 
 [build.environment]
-  NODE_VERSION = "18.17.1"  # Verified LTS version
-  NPM_VERSION = "9.6.7"
+  NODE_VERSION = "20.11.1"  # Current LTS as of May 2024
+  NPM_VERSION = "10.4.0"
