--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,5 @@
   publish = "build"
 
 [build.environment]
-  NODE_VERSION = "20.11.1"  # Current LTS as of May 2024
-  NPM_VERSION = "10.4.0"
+  NODE_VERSION = "18.20.2"
+  NPM_VERSION = "10.5.0"
