--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.20.2",  
-    "npm": "10.5.0"
+    "node": "16.20.2",
+    "npm": "8.19.4"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",  
-    "react-router-dom": "6.22.1",  
-    
+    "@testing-library/dom": "^8.17.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "4.0.3",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^6.3.0",
+    "ajv": "^8.12.0",
+    "recharts": "^3.1.2",
+    "web-vitals": "^2.1.4"
+  },
+  "resolutions": {
+    "webpack": "^4.46.0",
+    "ajv": "^8.12.0"
   },
   "scripts": {
-    "start": "set SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "set SET NODE_OPTIONS=--openssl-legacy-provider && GENERATE_SOURCEMAP=false CI=false react-scripts build",
+    "start": "react-scripts start",
+    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "rm -rf node_modules/.cache"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
