--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "dependencies": {
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^6.3.0",
+    "react-icons": "^4.7.1",
+    "react-leaflet": "^3.2.5",
+    "react-router-dom": "^5.3.4",
     "ajv": "^8.12.0",
-    "recharts": "^3.1.2",
+    "recharts": "^2.4.3",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
@@ -31,7 +31,8 @@
     "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "predeploy": "npm install --legacy-peer-deps",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package || true"
   },
   "eslintConfig": {
     "extends": [
