--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.20.2",
-    "npm": "8.19.4"
+    "node": "18.20.2",
+    "npm": "9.6.7"
   },
   "dependencies": {
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "leaflet": "^1.9.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "react-icons": "^4.7.1",
-    "react-leaflet": "^3.2.5",
-    "react-router-dom": "^5.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^6.22.1",
     "ajv": "^8.12.0",
-    "recharts": "^2.4.3",
+    "recharts": "^3.1.2",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
-    "webpack": "^4.46.0",
+    "webpack": "^5.89.0",
     "ajv": "^8.12.0"
   },
   "scripts": {
